--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
         <link rel="stylesheet" href="./assets/css/sobre/sobre.css">
         <link rel="stylesheet" href="./assets/css/sobre/sobre-titulo.css">
         <link rel="stylesheet" href="./assets/css/sobre/sobre-descricao.css">
+        <link rel="stylesheet" href="./assets/css/receitas.css"/>
+        <link rel="stylesheet" href="./assets/css/receita/receita.css"/>
+        <link rel="stylesheet" href="./assets/css/receita/receita-botao.css"/>
+        <link rel="stylesheet" href="./assets/css/receita/receita-conteudo.css"/>
+        <link rel="stylesheet" href="./assets/css/receita/receita-descricao.css"/>
+        <link rel="stylesheet" href="./assets/css/receita/receita-imagem.css"/>
+        <link rel="stylesheet" href="./assets/css/receita/receita-titulo.css"/>
     </head>
     <body>
+        <!-- ----------------------------------------HEADER------------------------------------------------- -->
         <header class="cabecalho">
             <img class="logo" src="assets/img/logo.jpg" alt="Fruta e Fruto">
             <nav class="menu">
@@ -32,6 +40,7 @@
                 </ul>
             </nav>
         </header>
+        <!-- ----------------------------------------SECTION------------------------------------------------ -->
         <section class="banner">
             <img class="banner__imagem" src="assets/img/banner.jpg" alt="banner">
             <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
@@ -39,6 +48,57 @@
         <section class="sobre">
             <h2 class="sobre__titulo">Receitas para economizar e ganhar saúde</h2>
             <p class="sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+        </section>
+        <!-- ------------------------------------SECTION CARDS---------------------------------------------- -->
+        <section class="receitas">
+            <div class="receita">
+                <img alt="Tigela de abacate" class="receita__imagem" src="./assets/img/receitas/tigela-de-abacate.jpg" />
+                <div class="receita__conteudo">
+                    <h4 class="receita__titulo">Tigela de abacate</h4>
+                    <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                    <button class="receita__botao">Ver receita</button>
+                </div>
+            </div>
+            <div class="receita">
+                <img alt="Salada de kiwi" class="receita__imagem" src="./assets/img/receitas/salada-de-kiwi.jpg" />
+                <div class="receita__conteudo">
+                    <h4 class="receita__titulo">Salada de kiwi</h4>
+                    <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                    <button class="receita__botao">Ver receita</button>
+                </div>
+            </div>
+            <div class="receita">
+                <img alt="Mix de vegetais" class="receita__imagem" src="./assets/img/receitas/mix-de-vegetais.jpg" />
+                <div class="receita__conteudo">
+                    <h4 class="receita__titulo">Mix de vegetais</h4>
+                    <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                    <button class="receita__botao">Ver receita</button>
+                </div>
+            </div>
+            <div class="receita">
+                <img alt="Pimentões à Juliana" class="receita__imagem" src="./assets/img/receitas/pimentoes-a-juliana.jpg" />
+                <div class="receita__conteudo">
+                    <h4 class="receita__titulo">Pimentões à Juliana</h4>
+                    <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                    <button class="receita__botao">Ver receita</button>
+                </div>
+            </div>
+            <div class="receita">
+                <img alt="Prato oriental" class="receita__imagem" src="./assets/img/receitas/prato-oriental.jpg" />
+                <div class="receita__conteudo">
+                    <h4 class="receita__titulo">Prato oriental</h4>
+                    <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                    <button class="receita__botao">Ver receita</button>
+                </div>
+            </div>
+            <div class="receita">
+                <img alt="Beterrabas assadas" class="receita__imagem" src="./assets/img/receitas/beterrabas-assadas.jpg" />
+                <div class="receita__conteudo">
+                    <h4 class="receita__titulo">Beterrabas assadas</h4>
+                    <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                    <button class="receita__botao">Ver receita</button>
+                </div>
+            </div>
         </section>
     </body>
 </html>
