--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="./assets/css/pessoa/pessoa-funcao.css"/>
         <link rel="stylesheet" href="./assets/css/pessoa/pessoa-imagem.css"/>
         <link rel="stylesheet" href="./assets/css/pessoa/pessoa-nome.css"/>
+        <link rel="stylesheet" href="./assets/css/rodape.css">
     </head>
     <body>
         <!-- ----------------------------------------HEADER------------------------------------------------- -->
@@ -130,5 +131,9 @@
                 </div>
             </div>
         </section>
+        <!-- ---------------------------------------------FOOTER------------------------------------------------------->
+        <footer class="rodape">
+            Contato: exemplo@email.com.br
+        </footer>
     </body>
 </html>
