--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
         <link rel="stylesheet" href="./assets/css/cabecalho.css">
+        <link rel="stylesheet" href="./assets/css/logo.css">
         <link rel="stylesheet" href="./assets/css/menu/menu-lista.css">
         <link rel="stylesheet" href="./assets/css/menu/menu-item.css">
         <link rel="stylesheet" href="./assets/css/menu/menu-link.css">
